nextcloud/Deployment-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 34.0.4
    helm.sh/chart: nextcloud-9.3.0
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        hooks-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        nextcloud-config-hash: cbb6c2de040877ff05463124c15462f86a64108c62bfca7a849e85919b4c2ca3
        php-config-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/name: nextcloud
        haproxy/ingress: allow
    spec:
      containers:
        - env:
            - name: OVERWRITEPROTOCOL
              value: https
            - name: POSTGRES_HOST
              value: nextcloud-pg17-rw.nextcloud.svc.cluster.local
            - name: POSTGRES_DB
              value: nextcloud
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: db-username
                  name: nextcloud
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db-password
                  name: nextcloud
            - name: DATABASE_URL
              value: postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_HOST)/$(POSTGRES_DB)
            - name: REDIS_URL
              value: redis://:$(REDIS_HOST_PASSWORD)@$(REDIS_HOST):$(REDIS_HOST_PORT)
            - name: NEXTCLOUD_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  key: nextcloud-username
                  name: nextcloud
            - name: NEXTCLOUD_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: nextcloud-password
                  name: nextcloud
            - name: NEXTCLOUD_TRUSTED_DOMAINS
              value: nextcloud.anderwerse.de
            - name: OPENMETRICS_ALLOWED_CLIENTS
              value: 127.0.0.1,10.42.0.0/16,10.43.0.0/16
            - name: NEXTCLOUD_DATA_DIR
              value: /var/www/html/data
          image: docker.io/library/nextcloud:34.0.4-apache
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 300
            httpGet:
              httpHeaders:
                - name: Host
                  value: nextcloud.anderwerse.de
              path: /status.php
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: nextcloud
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 300
            httpGet:
              httpHeaders:
                - name: Host
                  value: nextcloud.anderwerse.de
              path: /status.php
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 750m
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/www/
              name: nextcloud-main
              subPath: root
            - mountPath: /var/www/html
              name: nextcloud-main
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-data
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-main
              subPath: config
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-main
              subPath: custom_apps
            - mountPath: /var/www/tmp
              name: nextcloud-main
              subPath: tmp
            - mountPath: /var/www/html/themes
              name: nextcloud-main
              subPath: themes
            - mountPath: /var/www/html/config/custom_infrastructure.config.php
              name: nextcloud-config
              subPath: custom_infrastructure.config.php
            - mountPath: /var/www/html/config/custom_maintenance.config.php
              name: nextcloud-config
              subPath: custom_maintenance.config.php
            - mountPath: /var/www/html/config/custom_region.config.php
              name: nextcloud-config
              subPath: custom_region.config.php
            - mountPath: /var/www/html/config/custom_user_oidc.config.php
              name: nextcloud-config
              subPath: custom_user_oidc.config.php
            - mountPath: /var/www/html/config/.htaccess
              name: nextcloud-config
              subPath: .htaccess
            - mountPath: /var/www/html/config/apache-pretty-urls.config.php
              name: nextcloud-config
              subPath: apache-pretty-urls.config.php
            - mountPath: /var/www/html/config/apcu.config.php
              name: nextcloud-config
              subPath: apcu.config.php
            - mountPath: /var/www/html/config/apps.config.php
              name: nextcloud-config
              subPath: apps.config.php
            - mountPath: /var/www/html/config/autoconfig.php
              name: nextcloud-config
              subPath: autoconfig.php
            - mountPath: /var/www/html/config/helm-metrics.config.php
              name: nextcloud-config
              subPath: helm-metrics.config.php
            - mountPath: /var/www/html/config/imaginary.config.php
              name: nextcloud-config
              subPath: imaginary.config.php
            - mountPath: /var/www/html/config/redis.config.php
              name: nextcloud-config
              subPath: redis.config.php
            - mountPath: /var/www/html/config/reverse-proxy.config.php
              name: nextcloud-config
              subPath: reverse-proxy.config.php
            - mountPath: /var/www/html/config/s3.config.php
              name: nextcloud-config
              subPath: s3.config.php
            - mountPath: /var/www/html/config/smtp.config.php
              name: nextcloud-config
              subPath: smtp.config.php
            - mountPath: /var/www/html/config/swift.config.php
              name: nextcloud-config
              subPath: swift.config.php
            - mountPath: /var/www/html/config/upgrade-disable-web.config.php
              name: nextcloud-config
              subPath: upgrade-disable-web.config.php
      dnsConfig:
        options: []
      securityContext:
        fsGroup: 33
      volumes:
        - name: nextcloud-main
          persistentVolumeClaim:
            claimName: nextcloud-nextcloud
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-nextcloud-data
        - configMap:
            name: nextcloud-config
          name: nextcloud-config
