nextcloud/Service-collabora-collabora-online.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: collabora
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: collabora-online
    app.kubernetes.io/version: 26.04.4.1.1
    helm.sh/chart: collabora-online-1.3.3
    type: main
  name: collabora-collabora-online
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 9980
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: collabora
    app.kubernetes.io/name: collabora-online
    type: main
  type: ClusterIP
