nextcloud/Service-nextcloud-imaginary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: imaginary
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 34.0.4
    helm.sh/chart: nextcloud-9.3.0
  name: nextcloud-imaginary
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/component: imaginary
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
