nextcloud/Service-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/monitor: enabled
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/version: 34.0.4
    helm.sh/chart: nextcloud-9.3.0
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
