nextcloud/Ingress-nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
    haproxy.org/hsts: "true"
    haproxy.org/hsts-include-subdomains: "true"
    haproxy.org/hsts-max-age: "15552000"
    haproxy.org/hsts-preload: "true"
  name: nextcloud
  namespace: nextcloud
spec:
  ingressClassName: haproxy
  rules:
    - host: nextcloud.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nextcloud.anderwerse.de
      secretName: nextcloud-tls
