nextcloud/CiliumNetworkPolicy-nextcloud-imaginary.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-imaginary
  namespace: nextcloud
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: imaginary
      app.kubernetes.io/name: nextcloud
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: app
            app.kubernetes.io/name: nextcloud
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
