nextcloud/CiliumNetworkPolicy-nextcloud.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
